welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:11: error: not found: value getMondeLargueur
	while (!positionFinale && x!=getMondeLargueur) {
                                     ^